force-app/main/default/objects/Int_OLMN_Net_Investment__c/Int_OLMN_Net_Investment__c.object-meta.xml
<CustomObject>
    <description>This contains interface net investment subledger information headed to newco oracle</description>
    <label>Int OLMN Net Investment</label>
    <nameField>
        <displayFormat>NI-{00000000}</displayFormat>
        <label>Int OLMN Net Investment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int OLMN Net Investments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>