force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/ACCOUNTING_YIELD__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNTING_YIELD__c</fullName>
    <label>ACCOUNTING YIELD</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>