force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/ARREARS_YN__c.field-meta.xml
<CustomField>
    <fullName>ARREARS_YN__c</fullName>
    <label>ARREARS YN</label>
    <length>5</length>
    <type>Text</type>
</CustomField>