force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/BILLED_UNPAID_REC__c.field-meta.xml
<CustomField>
    <fullName>BILLED_UNPAID_REC__c</fullName>
    <description>Billed but not paid Rent.</description>
    <inlineHelpText>Billed but not paid Rent.</inlineHelpText>
    <label>BILLED UNPAID REC</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>