force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/BOOKED_RESIDUAL__c.field-meta.xml
<CustomField>
    <fullName>BOOKED_RESIDUAL__c</fullName>
    <label>BOOKED RESIDUAL</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>