force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/CONTRACT_END_DATE__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_END_DATE__c</fullName>
    <label>CONTRACT END DATE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>