force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/CONTRACT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_NUMBER__c</fullName>
    <description>CONTRACT NUMBER</description>
    <label>CONTRACT_NUMBER</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>