force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/CONTRACT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_STATUS__c</fullName>
    <description>CONTRACT STATUS</description>
    <label>CONTRACT STATUS</label>
    <length>30</length>
    <type>Text</type>
</CustomField>