force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/CONTRACT_TERM__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_TERM__c</fullName>
    <description>CONTRACT TERM</description>
    <label>CONTRACT TERM</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>