force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/EQUIPMENT_COST_CORP__c.field-meta.xml
<CustomField>
    <fullName>EQUIPMENT_COST_CORP__c</fullName>
    <label>EQUIPMENT COST CORP</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>