force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/FIN_PRODUCT__c.field-meta.xml
<CustomField>
    <fullName>FIN_PRODUCT__c</fullName>
    <label>FIN PRODUCT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>