force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/FROZEN_LEASE_INCOME__c.field-meta.xml
<CustomField>
    <fullName>FROZEN_LEASE_INCOME__c</fullName>
    <label>FROZEN LEASE INCOME</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>