force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/FROZEN_RESIDUAL_INCOME__c.field-meta.xml
<CustomField>
    <fullName>FROZEN_RESIDUAL_INCOME__c</fullName>
    <description>Total Receivable amount</description>
    <inlineHelpText>Total Receivable amount</inlineHelpText>
    <label>FROZEN RESIDUAL INCOME</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>