force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/GROSS_RECEIVABLES__c.field-meta.xml
<CustomField>
    <fullName>GROSS_RECEIVABLES__c</fullName>
    <label>GROSS RECEIVABLES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>