force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/LEASE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>LEASE_TYPE__c</fullName>
    <label>LEASE TYPE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>