force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/LESSEE_NAME__c.field-meta.xml
<CustomField>
    <fullName>LESSEE_NAME__c</fullName>
    <label>LESSEE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>