force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/LESSEE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>LESSEE_NUMBER__c</fullName>
    <label>LESSEE NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>