force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/MONEY_ON_ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>MONEY_ON_ACCOUNT__c</fullName>
    <description>On Account Cash.</description>
    <inlineHelpText>On Account Cash.</inlineHelpText>
    <label>MONEY ON ACCOUNT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>