force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/MTD_LEASE_INCOME__c.field-meta.xml
<CustomField>
    <fullName>MTD_LEASE_INCOME__c</fullName>
    <description>Value for the current period</description>
    <inlineHelpText>Value for the current period</inlineHelpText>
    <label>MTD LEASE INCOME</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>