force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/MTD_RESIDUAL_INCOME__c.field-meta.xml
<CustomField>
    <fullName>MTD_RESIDUAL_INCOME__c</fullName>
    <description>Value for current period</description>
    <label>MTD RESIDUAL INCOME</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>