force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/PARTIAL_TERMINATION_YN__c.field-meta.xml
<CustomField>
    <fullName>PARTIAL_TERMINATION_YN__c</fullName>
    <description>If there exists a record in Contract_Equipment__C with status__C as TERMINATED and contract status as Active, then Y else N</description>
    <label>PARTIAL TERMINATION YN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>