force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/PAYMENT_FREQUENCY__c.field-meta.xml
<CustomField>
    <fullName>PAYMENT_FREQUENCY__c</fullName>
    <description>M for Monthly
A for Annual
S for Semi-Annual</description>
    <inlineHelpText>M for Monthly
A for Annual
S for Semi-Annual</inlineHelpText>
    <label>PAYMENT FREQUENCY</label>
    <length>1</length>
    <type>Text</type>
</CustomField>