force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/PERIOD_DATE__c.field-meta.xml
<CustomField>
    <fullName>PERIOD_DATE__c</fullName>
    <description>End Date of the current period in YYYYMMDD Format.</description>
    <label>PERIOD DATE</label>
    <length>150</length>
    <type>Text</type>
</CustomField>