force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/PRIVATE_LABEL__c.field-meta.xml
<CustomField>
    <fullName>PRIVATE_LABEL__c</fullName>
    <label>PRIVATE LABEL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>