force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/REBOOKED_YN__c.field-meta.xml
<CustomField>
    <fullName>REBOOKED_YN__c</fullName>
    <description>Y or N</description>
    <label>REBOOKED YN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>