force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/REMAINING_PAYMENTS__c.field-meta.xml
<CustomField>
    <fullName>REMAINING_PAYMENTS__c</fullName>
    <label>REMAINING PAYMENTS</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>