force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/REPORTING_ENTITY__c.field-meta.xml
<CustomField>
    <fullName>REPORTING_ENTITY__c</fullName>
    <defaultValue>&#39;00101&#39;</defaultValue>
    <label>REPORTING ENTITY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>