force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <defaultValue>&#39;02&#39;</defaultValue>
    <label>SBU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>