force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/SOFT_COST__c.field-meta.xml
<CustomField>
    <fullName>SOFT_COST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SOFT COST</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>