force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/TOT_UNEARNED_LEASE_INCOME__c.field-meta.xml
<CustomField>
    <fullName>TOT_UNEARNED_LEASE_INCOME__c</fullName>
    <description>Sum this amount for all records.</description>
    <inlineHelpText>Sum this amount for all records.</inlineHelpText>
    <label>TOT UNEARNED LEASE INCOME</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>