force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/TOT_UNEARNED_RESIDUAL_INCOME__c.field-meta.xml
<CustomField>
    <fullName>TOT_UNEARNED_RESIDUAL_INCOME__c</fullName>
    <label>TOT UNEARNED RESIDUAL INCOME</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>