force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/UNBILLED_RECEIVABLE__c.field-meta.xml
<CustomField>
    <fullName>UNBILLED_RECEIVABLE__c</fullName>
    <description>Sum those records where Billed__c is NO or NULL</description>
    <label>UNBILLED RECEIVABLE</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>