force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/UNEARNED_LEASE_INCOME__c.field-meta.xml
<CustomField>
    <fullName>UNEARNED_LEASE_INCOME__c</fullName>
    <description>Sum for those records where Accrued_Flag__c is null</description>
    <label>UNEARNED LEASE INCOME</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>