force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/UPFRONT_TAX_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>UPFRONT_TAX_AMOUNT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>UPFRONT TAX AMOUNT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>