force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/VENDOR_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>VENDOR_NUMBER__c</fullName>
    <label>VENDOR NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>