force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/VENDOR_PROGRAM__c.field-meta.xml
<CustomField>
    <fullName>VENDOR_PROGRAM__c</fullName>
    <label>VENDOR PROGRAM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>