force-app/main/default/objects/Int_OLMN_Net_Investment__c/fields/YTD_LEASE_INCOME__c.field-meta.xml
<CustomField>
    <fullName>YTD_LEASE_INCOME__c</fullName>
    <label>YTD LEASE INCOME</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>