force-app/main/default/objects/Int_OLMN_Net_Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>CONTRACT_NUMBER__c</columns>
    <columns>YTD_LEASE_INCOME__c</columns>
    <columns>YTD_RESIDUAL_INCOME__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>